Bug 113014 - Numbering in a table is displayed outside the visible area when content/margins too large for the cell
Summary: Numbering in a table is displayed outside the visible area when content/margi...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, filter:docx
: 131284 (view as bug list)
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2017-10-09 14:07 UTC by Gabor Kelemen (Collabora)
Modified: 2020-03-19 21:56 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
The problematic document (19.52 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-10-09 14:07 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the document in LO 5.3 and Word 2013 (151.74 KB, image/png)
2017-10-09 14:08 UTC, Gabor Kelemen (Collabora)
Details
tdf113014_numberingMargin.odt: numbering hidden in table cell when too small for margins (11.97 KB, application/vnd.oasis.opendocument.text)
2018-08-13 14:01 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2017-10-09 14:07:25 UTC
Created attachment 136870 [details]
The problematic document

The attached document has a simple 4x15 table. In the first column of table is a numbering from 1 to 15. In Microsoft Word 2013 the numbering is visible while in LibreOffice Writer the numbers are displayed outside the visible area. The Paragraph properties are different in Word and Writer: while the left indentation is 0,1 cm in Word, in Writer it is 0,74 cm and the indentation of the first line is -0,64 cm. Changing the indentation of the first line to -1 ch fixes the issue.

Steps to reproduce:
1. Open the attached TableNumbering-bug.docx file both in Microsoft Excel and LibreOffice Calc.

Actual results:
The numbering in the first column is not visible.

Expected results:
The numbering should be visible.
Comment 1 Gabor Kelemen (Collabora) 2017-10-09 14:08:36 UTC
Created attachment 136871 [details]
Screenshot of the document in LO 5.3 and Word 2013
Comment 2 Xisco Faulí 2017-10-09 17:18:24 UTC
Confirmed in

Version: 6.0.0.0.alpha0+
Build ID: 5273c680d17fa386a844d3bbffd20b6a8bd354a1
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

but not in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 3 Aron Budea 2017-10-26 04:05:32 UTC
I wouldn't consider it correct in 3.3.0. Maybe you can say it was wrong in a different way.
Comment 4 Timur 2017-11-06 18:26:54 UTC
Looks like a dupe of Bug 78352
Comment 5 Buovjaga 2018-06-28 15:49:21 UTC
(In reply to Aron Budea from comment #3)
> I wouldn't consider it correct in 3.3.0. Maybe you can say it was wrong in a
> different way.

You are right. Anyway, this is the range I get from 43all repo for the changed rendering: https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=6263315825e01e766668b9ce5d2eb52e71e051a7...fcda0878e99d5792e150705f63f3ba25b5d8d14c
Comment 6 Justin L 2018-08-11 18:18:42 UTC Comment hidden (no-value)
Comment 7 Justin L 2018-08-13 14:01:05 UTC
Created attachment 144149 [details]
tdf113014_numberingMargin.odt: numbering hidden in table cell when too small for margins

The importing of all the docx information looks correct. It seems to be some other rule being broken (content spacing or layout). For example, make column A just a little bit wider, and then everything will jump into place. So it is related to the numbering requiring more space than the width of the cell? (I noticed this because removing border padding made the problem disappear.) The odt file was designed to show this is not a docx problem.
Comment 8 Justin L 2018-08-13 14:09:34 UTC
I also notice that it round-trips OK. Word looks fine still with the round-tripped file - extra confirmation that import is OK.

Bibisecting with the ODT file, the numbering is missing since the earliest possible in 16.04 (3.5ish). So I'm going to remove the regression keyword.
Comment 9 Gabor Kelemen (Collabora) 2018-08-13 21:03:58 UTC
Thanks for taking the time to look at this one.
I have a feeling that my other bug #113608 might be somehow related to this.
Comment 10 Commit Notification 2019-09-11 05:45:44 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/f0c832acb53326ccc9a8c1a47401fbc9e1081feb%5E%21

tdf#113014 Writer: show numbering in narrow cells

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 László Németh 2019-09-11 05:46:59 UTC
Fixed in master. Maybe this was an old regression, related to the changes in numbering.

@all: thanks for your help!

    tdf#113014 Writer: show numbering in narrow cells
    
    Paragraph numbering was invisible in narrow cells
    of Writer tables, when the paragraphs have a wider
    indentation and an equivalent negative first line
    indentation, too.
    
    GetLeftMarginWithNum()==0 doesn't mean that the
    paragraph is not numbered with the "new" numbering
    style SvxNumberFormat::LABEL_ALIGNMENT.
Comment 12 Aron Budea 2020-03-19 21:56:37 UTC
*** Bug 131284 has been marked as a duplicate of this bug. ***