tdf#113014 Writer: show numbering in narrow cells

Paragraph numbering was invisible in narrow cells
of Writer tables, when the paragraphs have a wider
indentation and an equivalent negative first line
indentation, too.

GetLeftMarginWithNum()==0 doesn't mean that the
paragraph is not numbered with the "new" numbering
style SvxNumberFormat::LABEL_ALIGNMENT.

Change-Id: I99f0a84404876db6cefdf0da845cd8b425860553
Reviewed-on: https://gerrit.libreoffice.org/78802
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>